api get cloud provider
